Se crean todas las vistas con sus botones y sus formularios

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -8,6 +8,10 @@
     "skipLibCheck": true,
     "baseUrl": "src",
     "paths": {
+      "@/components/*" : ["components/*"],
+      "@/types/*" : ["types/*"],
+      "@/utils/*" : ["utils/*"],
+      "@/views/*" : ["views/*"],
     },
 
     /* Bundler mode */
